# api

./: .gitignore  .travis.yml  Cargo.toml  build-release
deploy/: Dockerfile
migrations/20170326234713_create_initial_tables/: down.sql  up.sql
migrations/20170628124554_game_update_finished_at/: up.sql
migrations/20170703233106_create_chats_and_chat_messages/: down.sql  up.sql
src/: auth.rs  config.rs  errors.rs  game.rs  game_client.rs  mail.rs  main.rs  render.rs  websocket.rs
src/controller/: auth.rs  game.rs  mail.rs  mod.rs
src/db/: color.rs  mod.rs  models.rs  query.rs  schema.rs
src/db/query/: chat.rs  game.rs  mod.rs
