[package]
name = "brdgme-api"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-cmd = { git = "https://github.com/brdgme/cmd.git" }
brdgme-game = { git = "https://github.com/brdgme/game.git" }
brdgme-color = { git = "https://github.com/brdgme/color.git" }
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
lazy_static = "0.2.6"
error-chain = "0.10.0"
r2d2 = "0.7.1"
rand = "0.3.15"
chrono = "0.3.0"
lettre = "0.6.2"
log = "0.3.7"
env_logger = "0.4.2"
uuid = { version = "0.4.0", features = ["serde"] }
serde = "0.9.13"
serde_derive = "0.9.13"
serde_json = "0.9.9"
rocket = "0.2.4"
rocket_codegen = "0.2.4"
rocket_contrib = "0.2.4"
email = "0.0.16"
hyper = "0.10.7"
hyper-native-tls = "0.2.2"
diesel = { version = "0.12.0", features = ["postgres", "uuid", "chrono", "large-tables"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
r2d2-diesel = "0.12.0"
unicase = "1.4.0"