[package]
name = "brdgme-api"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-cmd = { git = "https://github.com/brdgme/cmd.git" }
brdgme-game = { git = "https://github.com/brdgme/game.git" }
brdgme-color = { git = "https://github.com/brdgme/color.git" }
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
lazy_static = "1.2.0"
failure = "0.1.3"
r2d2 = "0.8.3"
rand = "0.6.1"
chrono = "0.4.6"
lettre = "0.8.3"
lettre_email = "0.8.3"
log = "0.4.6"
env_logger = "0.6.0"
uuid = { version = "0.6.0", features = ["serde", "v4"] }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", features = ["json"] }
email = "0.0.20"
hyper = "0.12.16"
hyper-tls = "0.3.1"
diesel = { version = "1.3.3", features = ["postgres", "uuid", "chrono", "32-column-tables"] }
r2d2-diesel = "1.0.0"
unicase = "2.2.0"
redis = "0.9.1"